BUG: textarea padding
When not using a prefix icon, there is too much
padding on the top. This is noticeable when two
textareas are side-by-side.

1) With no text, the placeholders line up, but
the lines are offset.
2) With text the labels match, but the written
text and the lines are offset.

Here's a code-pen with v0.97.6 showing the bug:
http://codepen.io/anon/pen/zBqGPB

I've also included the text-areas in the sample
test/html/forms.html for easier testing

--- a/bin/materialize.css
+++ b/bin/materialize.css
@@ -4624,14 +4624,14 @@ small {
   padding: 20px;
 }
 
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
   color: #ffab40;
   margin-right: 20px;
   transition: color .3s ease;
   text-transform: uppercase;
 }
 
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
   color: #ffd8a6;
 }
 
@@ -4752,7 +4752,6 @@ small {
 }
 
 .tabs .tab {
-  -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1;
@@ -5889,10 +5888,6 @@ textarea.materialize-textarea + label:after {
   width: calc(100% - 3rem);
 }
 
-.input-field .prefix ~ textarea {
-  padding-top: .8rem;
-}
-
 .input-field .prefix ~ label {
   margin-left: 3rem;
 }
@@ -5957,7 +5952,7 @@ textarea {
 textarea.materialize-textarea {
   overflow-y: hidden;
   /* prevents scroll bar flash */
-  padding: 1.6rem 0;
+  padding: .8rem 0 1.6rem 0;
   /* prevents text jump on Enter keypress */
   resize: none;
   min-height: 3rem;
@@ -6766,8 +6761,7 @@ input[type=range]:focus::-ms-fill-upper {
           backface-visibility: hidden;
   overflow-y: auto;
   will-change: transform;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transform: translateX(-105%);
           transform: translateX(-105%);
 }
